--- a/Responsive Web Design(NEW)/8 Accessibility by Building a Quiz/2 Building a Quiz.html
+++ b/Responsive Web Design(NEW)/8 Accessibility by Building a Quiz/2 Building a Quiz.html
@@ -136,3 +136,89 @@ Link the label elements with their corresponding input elements. -->
               </ul> -->
 
 
+<!-- Step 31
+Give the label elements text such that the input comes before the text. Then, give the input elements a value matching the text.
+The text should either be True or False. -->
+
+<!--               <ul class="answers-list">
+                <li>
+                  <label for="q1-a1">                    
+                    <input type="radio" id="q1-a1" value="true" />
+                    True
+                  </label>
+                </li>
+                <li>
+                  <label for="q1-a2">                    
+                    <input type="radio" id="q1-a2" value="false" />
+                    False
+                  </label>
+                </li>
+              </ul>
+            </fieldset>
+          </div>
+          <div class="question-block">
+            <p>2</p>
+            <fieldset class="question" name="html-question-two">
+              <legend>
+                A label element nesting an input element is required to have a
+                for attribute with the same value as the input's id
+              </legend>
+              <ul class="answers-list">
+                <li>
+                  <label for="q2-a1">
+                    <input type="radio" id="q2-a1" value="true" />
+                    True
+                  </label>
+                </li>
+                <li>
+                  <label for="q2-a2">
+                    <input type="radio" id="q2-a2" value="false" />
+                    False
+                  </label>
+                </li>
+              </ul> -->
+
+
+<!-- Step 32
+If you click on the radio inputs, you might notice both inputs within the same true/false fieldset can be selected at the same time.
+Group the relevant inputs together such that only one input from a pair can be selected at a time. -->
+
+<!--               <ul class="answers-list">
+                <li>
+                  <label for="q1-a1">
+                    <input type="radio" id="q1-a1" value="true" name="choose-one" />
+                    True
+                  </label>
+                </li>
+                <li>
+                  <label for="q1-a2">
+                    <input type="radio" id="q1-a2" value="false" name="choose-one" />
+                    False
+                  </label>
+                </li>
+              </ul>
+            </fieldset>
+          </div>
+          <div class="question-block">
+            <p>2</p>
+            <fieldset class="question" name="html-question-two">
+              <legend>
+                A label element nesting an input element is required to have a
+                for attribute with the same value as the input's id
+              </legend>
+              <ul class="answers-list">
+                <li>
+                  <label for="q2-a1">
+                    <input type="radio" id="q2-a1" value="true" name="choose-two" />
+                    True
+                  </label>
+                </li>
+                <li>
+                  <label for="q2-a2">
+                    <input type="radio" id="q2-a2" value="false" name="choose-two" />
+                    False
+                  </label>
+                </li>
+              </ul> -->
+
+
