--- a/Responsive Web Design(NEW)/8 Accessibility by Building a Quiz/2 Building a Quiz.html
+++ b/Responsive Web Design(NEW)/8 Accessibility by Building a Quiz/2 Building a Quiz.html
@@ -265,3 +265,41 @@ Within the div.question-block elements, nest one label element, and give the lab
         </section>
 
 
+<!-- Step 36
+Within the first div.answer element, nest one required select element with three option elements.
+Give the first option element a value of "", and the text Select an option. Give the second option element a value of yes, and the text Yes. 
+Give the third option element a value of no, and the text No. -->
+
+            <div class="answer">
+              <select required>
+                <option value="">Select an option</option>
+                <option value="yes">Yes</option>
+                <option value="no">No</option>
+              </select>
+            </div>
+
+
+<!-- Step 37
+Link the first label element to the select element, and give the select element a name attribute. -->
+
+            <div class="question-block">
+              <label for="customer">Are you a frontend developer?</label>
+            </div>
+            <div class="answer">
+              <select name="customer" id="customer" required>
+                <option value="">Select an option</option>
+                <option value="yes">Yes</option>
+                <option value="no">No</option>
+              </select>
+            </div>
+
+
+<!-- Step 38
+Nest one textarea element within the second div.answer element, and set the number of rows and columns it has.
+Then, give the textarea placeholder text describing an example answer. -->
+
+            <div class="answer">
+              <textarea placeholder="How to start?" rows="3" cols="20"></textarea>
+            </div>
+
+
