--- a/Responsive Web Design(NEW)/8 Accessibility by Building a Quiz/3 Building a Quiz.html
+++ b/Responsive Web Design(NEW)/8 Accessibility by Building a Quiz/3 Building a Quiz.html
@@ -87,3 +87,84 @@ li > a {
 }
 
 
+<!-- Step 46
+To make the navigation buttons look more like typical buttons, remove the underline from the anchor tags.
+Then, create a new selector targeting the navigation list elements so that when the cursor hovers over them, 
+the background color and text color are switched, and the cursor becomes a pointer. -->
+
+nav > ul > li:hover {
+	/* nav li:hover */
+	background-color: #dfdfe2;
+	color: #1b1b32;
+	cursor: pointer;
+}
+
+li > a {
+  color: inherit;
+	text-decoration: none;
+}
+
+
+<!-- Step 47
+Tidy up the header, by using Flexbox to put space between the children, and vertically center them.
+Then, fix the header to the top of the viewport. -->
+
+header {
+  width: 100%;
+	height: 50px;
+	background-color: #1b1b32;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	position: fixed;
+	top: 0;
+}
+
+
+<!-- Step 48
+When the screen width is small, the h1 does not wrap its text content how it should. Align the text for the h1 element in the center.
+Then, give the main padding such that the Student Info section header can be fully seen. -->
+
+h1 {
+  color: #f1be32;
+	font-size: min(5vw, 1.2em);
+  text-align: center;
+}
+
+main {
+  padding-top: 30px;
+}
+
+
+<!-- Step 49
+On small screens, the unordered list in the navigation bar overflows the right side of the screen.
+
+Fix this by using Flexbox to wrap the ul content. Then, set the following CSS properties to correctly align the text:
+
+align-items: center;
+padding-inline-start: 0;
+margin-block: 0;
+height: 100%; -->
+
+nav > ul {
+  display: flex;
+	justify-content: space-evenly;
+  flex-wrap: wrap;
+  align-items: center;
+  padding-inline-start: 0;
+  margin-block: 0;
+  height: 100%;
+}
+
+
+<!-- Step 50
+Set the width of the section elements to 80% of their parent container. Then, use margins to center the section elements, adding 10px to the bottom margin.
+Also, ensure the section elements cannot be larger than 600px in width. -->
+
+section {
+	width: 80%;
+	max-width: 600px;
+	margin: 0 auto 10px auto;
+}
+
+
