--- a/Responsive Web Design(NEW)/8 Accessibility by Building a Quiz/3 Building a Quiz.html
+++ b/Responsive Web Design(NEW)/8 Accessibility by Building a Quiz/3 Building a Quiz.html
@@ -168,3 +168,51 @@ section {
 }
 
 
+<!-- Step 51
+Replace the top margin of the h2 elements with 60px of top padding. -->
+
+h2 {
+  border-bottom: 4px solid #dfdfe2;
+  margin-top: 0;
+  padding-top: 60px;
+}
+
+
+<!-- Step 52
+Add padding to the top and left of the .info elements, and set the other values to 0. -->
+
+.info {
+  padding: 5px 0 0 5px;
+}
+
+
+<!-- Step 53
+Give the .formrow elements top margin, and left and right padding. The other padding values should be 0.
+Then, increase the font size for all input elements. -->
+
+.formrow {
+  margin-top: 10px;
+  padding: 0 5px 0 5px;
+}
+
+input {
+  font-size: 14px;
+}
+
+
+<!-- Step 54
+To make the first section look more inline, target only the input elements within .info elements, and set their width to 50%, and left-align their text. -->
+
+.info input {
+  width: 50%;
+  text-align: left;
+}
+
+
+<!-- Step 55
+Target all label elements within .info elements, and set their width to 10%, and make it so they do not take up less than 55px. -->
+
+.info label {
+  width: 10%;
+  min-width: 55px;
+}
