--- a/Responsive Web Design(NEW)/8 Accessibility by Building a Quiz/4 Building a Quiz.html
+++ b/Responsive Web Design(NEW)/8 Accessibility by Building a Quiz/4 Building a Quiz.html
@@ -9,13 +9,7 @@ Also, align the text to the right. -->
 
 
 <!-- Step 57
-To neaten the .question-block elements, set the following CSS properties:
-
-text-align: left;
-display: block;
-width: 100%;
-margin-top: 20px;
-padding-top: 5px; -->
+To neaten the .question-block elements, set the following CSS properties: -->
 
 .question-block {
   text-align: left;
@@ -27,11 +21,7 @@ padding-top: 5px; -->
 
 
 <!-- Step 58
-Make the paragraph elements appear as a higher priority, with the following CSS properties:
-
-margin-top: 5px;
-padding-left: 15px;
-font-size: 20px; -->
+Make the paragraph elements appear as a higher priority, with the following CSS properties:; -->
 
 p {
   margin-top: 5px;
@@ -57,3 +47,56 @@ Remove the default styling for the list items of .answers-list, and remove the u
   list-style: none;
   padding: 0;
 }
+
+
+<!-- Step 61
+Give the submit button a freeCodeCamp-style design, with the following CSS properties: -->
+
+button {
+  display: block;
+  margin: 40px auto;
+  width: 40%;
+  padding: 15px;
+  font-size: 23px;
+  background: #d0d0d5;
+  border: 3px solid #3b3b4f;
+}
+
+
+<!-- Step 62
+Set the footer background color to #2a2a40, and use Flexbox to horizontally center the text. -->
+
+footer {
+  background-color: #2a2a40;
+  display: flex;
+  justify-content: center;
+}
+
+
+<!-- Step 63
+Now, we cannot read the text. Target the footer and the anchor element within to set the font color to a color of adequate contrast ratio. -->
+
+footer, footer a {
+  color: #dfdfe2;
+}
+
+
+<!-- Step 64
+Horizontally center all the text within the address element, and add some padding. -->
+
+address {
+  display: flex;
+	text-align: center;
+  padding: 5px;
+}
+
+
+<!-- Step 65
+Clicking on the navigation links should jump the viewport to the relevant section. However, this jumping can be disorienting for some users.
+Select all elements, and set the scroll-behavior to smooth. -->
+
+* {
+  scroll-behavior: smooth;
+}
+
+
