--- a/Responsive Web Design(NEW)/8 Accessibility by Building a Quiz/4 Building a Quiz.html
+++ b/Responsive Web Design(NEW)/8 Accessibility by Building a Quiz/4 Building a Quiz.html
@@ -100,3 +100,37 @@ Select all elements, and set the scroll-behavior to smooth. -->
 }
 
 
+<!-- Step 66
+Setting the scroll-behavior to smooth is preferred by most users. 
+However, some users find this to be too slow, and prefer to have the scrolling happen instantaneously.
+There exists a media rule to set CSS based on the user's browser settings. This media rule is called prefers-reduced-motion, and expects one of the following values:
+
+reduce
+no-preference
+Wrap the appropriate rule within a prefers-reduced-motion media rule such that a scroll-behavior of smooth 
+is only set if the user's browser setting is no-preference. -->
+
+@media (prefers-reduced-motion: no-preference) {  
+  * {
+    scroll-behavior: smooth;
+  }
+}
+
+
+<!-- Step 67
+Finally, the navigation accessibility can be improved by providing keyboard shortcuts.
+
+The accesskey attribute accepts a space-separated list of access keys. For example:
+
+<button type="submit" accesskey="s">Submit</button>
+Give each of the navigation links a single-letter access key.
+
+Note: It is not always advised to use access keys, but they can be useful
+
+Well done. You have completed the Accessibility Quiz practice project. -->
+
+        <ul>
+          <li><a href="#student-info" accesskey="i">INFO</a></li>
+          <li><a href="#html-questions" accesskey="h">HTML</a></li>
+          <li><a href="#css-questions" accesskey="c">CSS</a></li>
+				</ul>
