--- a/Responsive Web Design(NEW)/9 Tribute Page/index.html
+++ b/Responsive Web Design(NEW)/9 Tribute Page/index.html
@@ -1,3 +1,12 @@
-<main id="main">
-  
-</main>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title></title>
+	  <link rel="stylesheet" type="text/css" href="styles.css" />
+  </head>
+  <body>
+    <main id="main">
+
+    </main>
+  </body>
+</html>
