--- a/Responsive Web Design(NEW)/9 Tribute Page/index.html
+++ b/Responsive Web Design(NEW)/9 Tribute Page/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Tribute Page</title>
 	  <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
     <main id="main">
-
+      <h1 id="title">Viktor Tsoi</h1>
+      <figure id="img-div"></figure>
+      <section></section>
     </main>
   </body>
 </html>
