--- a/Responsive Web Design(NEW)/9 Tribute Page/index.html
+++ b/Responsive Web Design(NEW)/9 Tribute Page/index.html
@@ -7,7 +7,10 @@
   <body>
     <main id="main">
       <h1 id="title">Viktor Tsoi</h1>
-      <figure id="img-div"></figure>
+      <figure id="img-div">
+        <img id="image" src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Victor_Tsoi_1986_cropped.jpg" alt="Tsoi in 1986">
+        <figcaption id="img-caption"> Soviet and Russian singer and songwriter who co-founded Kino, one of the most popular and musically influential bands in the history of Russian/Soviet music. Tsoi in 1986</figcaption>
+      </figure>
       <section></section>
     </main>
   </body>
