--- a/Responsive Web Design(NEW)/9 Tribute Page/index.html
+++ b/Responsive Web Design(NEW)/9 Tribute Page/index.html
@@ -9,7 +9,7 @@
       <h1 id="title">Viktor Tsoi</h1>
       <figure id="img-div">
         <img id="image" src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Victor_Tsoi_1986_cropped.jpg" alt="Tsoi in 1986">
-        <figcaption id="img-caption"> Tsoi in 1986. <br> Soviet and Russian singer and songwriter who co-founded Kino, one of the most popular and musically influential bands in the history of Russian/Soviet music.</figcaption>
+        <figcaption id="img-caption"><i>Tsoi in 1986.</i> <br><br> Soviet and Russian singer and songwriter who co-founded Kino, one of the most popular and musically influential bands in the history of Russian/Soviet music.</figcaption>
       </figure>
       <section id="tribute-info">Viktor Robertovich Tsoi was born on 21 June 1962 and raised in Leningrad. He started writing songs when he was a teenager. He made lots of music - ten albums in total. After Kino was in the 1987 Soviet film Assa, it became very popular. This lead to Tsoi having a leading role in the Kazakh new wave art film The Needle. In 1990, after their large concert at the Luzhniki Stadium. Tsoi moved to Latvia with another member of Kino, Yuri Kasparyan to work on Kino's next album. Two months after the concert in the Luzhniki Stadium, Tsoi died in a car crash. Tsoi and his music are still widely popular.
       </section>
