--- a/Responsive Web Design(NEW)/10 CSS Pseudo Selectors By Building A Balance Sheet/1 Balance Sheet.html
+++ b/Responsive Web Design(NEW)/10 CSS Pseudo Selectors By Building A Balance Sheet/1 Balance Sheet.html
@@ -1,1 +1,16 @@
+<!-- Step 1
+Set up your HTML with the DOCTYPE, html, head, and body elements. 
+Give your head element the appropriate meta elements for the charset and viewport, a title element with an appropriate title, and a link element for your stylesheet. -->
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Balance sheet</title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+  </head>
+  <body></body>
+</html>
+
 
