--- a/Responsive Web Design(NEW)/10 CSS Pseudo Selectors By Building A Balance Sheet/1 Balance Sheet.html
+++ b/Responsive Web Design(NEW)/10 CSS Pseudo Selectors By Building A Balance Sheet/1 Balance Sheet.html
@@ -1,6 +1,7 @@
 <!-- Step 1
 Set up your HTML with the DOCTYPE, html, head, and body elements. 
-Give your head element the appropriate meta elements for the charset and viewport, a title element with an appropriate title, and a link element for your stylesheet. -->
+Give your head element the appropriate meta elements for the charset and viewport, 
+a title element with an appropriate title, and a link element for your stylesheet. -->
 
 <!DOCTYPE html>
 <html>
@@ -14,3 +15,43 @@ Give your head element the appropriate meta elements for the charset and viewpor
 </html>
 
 
+<!-- Step 2
+Within your body element, nest a section element within a main element. -->
+
+  <body>   
+    <main>
+      <section>
+      </section>
+    </main>    
+  </body>
+
+
+<!-- Step 3
+Within your section element, add an h1 element with a nested span element. -->
+
+      <section>
+        <h1>
+          <span></span>
+        </h1>
+      </section>
+
+
+<!-- Step 4
+Screen readers announce HTML elements based on the document flow. 
+We will eventually want the balance sheet to have a heading of "Balance Sheet" and a subheading of "AcmeWidgetCorp". 
+However, this order does not make sense if announced by a screen reader.
+
+Give your existing span the class attribute set to flex, and add two span elements within it. Give the first the text AcmeWidgetCorp. 
+Give the second the text Balance Sheet. You will use CSS to reverse the order of the text on the page, but the HTML order will make more sense for a screen reader. -->
+
+          <span class="flex">
+            <span>AcmeWidgetCorp</span>
+            <span>Balance Sheet</span>
+          </span>
+
+
+<!-- Step 5
+Below your h1 element, create a div element. Give it an id attribute set to years. 
+You want this particular element to be hidden from screen readers, so give it the aria-hidden attribute set to true. -->
+
+<div id="years" aria-hidden="true"></div>
