--- a/Responsive Web Design(NEW)/10 CSS Pseudo Selectors By Building A Balance Sheet/1 Balance Sheet.html
+++ b/Responsive Web Design(NEW)/10 CSS Pseudo Selectors By Building A Balance Sheet/1 Balance Sheet.html
@@ -116,3 +116,73 @@ The td element indicates a data cell, while the th element indicates a header ce
             </thead>
 
 
+<!-- Step 11
+Within each of your new th elements, nest a span element with the class set to sr-only year. Give them the following text (in order): 2019, 2020, and 2021.
+Give your third th element the class attribute set to current.
+Leave the td element empty. This element exists only to ensure your table has a four-column layout and associate the headers with the correct columns. -->
+
+            <thead>
+              <tr>
+                <td></td>
+                <th>
+                  <span class="sr-only year">2019</span>
+                </th>
+                <th>
+                  <span class="sr-only year">2020</span>
+                </th>
+                <th class="current">
+                  <span class="sr-only year">2021</span>
+                </th>
+              </tr>
+            </thead>
+
+
+<!-- Step 12
+Within your tbody element, add four tr elements. Give the first three a class attribute set to data, and the fourth a class attribute set to total. -->
+
+            <tbody>
+              <tr class="data"></tr>
+              <tr class="data"></tr>
+              <tr class="data"></tr>
+              <tr class="total"></tr>
+            </tbody>
+
+
+<!-- Step 13
+In your first tr, add a th element with the text Cash This is the cash we currently have on hand.. 
+Wrap all of that text except Cash in a span element with the class set to description.
+Following that, add three td elements with the following text (in order): $25, $30, $28. Give the third td element a class attribute set to current. -->
+
+              <tr class="data">
+                <th>Cash <span class="description">This is the cash we currently have on hand.</span></th>
+                <td>$25</td>
+                <td>$30</td>
+                <td class="current">$28</td>
+              </tr>
+
+
+<!-- Step 14
+In your second tr element, add a th element with the text Checking Our primary transactional account.. 
+Wrap that text, except for Checking , in a span element with the class attribute set to description.
+Following that, add three td elements with the following text (in order): $54, $56, $53. Give the third td element a class attribute set to current. -->
+
+              <tr class="data">
+                <th>Checking <span class="description">Our primary transactional account.</span></th>
+                <td>$54</td>
+                <td>$56</td>
+                <td class="current">$53</td>
+              </tr>
+
+
+<!-- Step 15
+In your third tr element, add a th element with the text Savings Funds set aside for emergencies.. 
+Wrap that text, except for Savings , in a span element with the class attribute set to description.
+Following that, add three td elements with the following text (in order): $500, $650, $728. Give the third td element a class attribute set to current. -->
+
+              <tr class="data">
+                <th>Savings <span class="description">Funds set aside for emergencies.</span></th>
+                <td>$500</td>
+                <td>$650</td>
+                <td class="current">$728</td>
+              </tr>
+
