Update 1 Balance Sheet.html

--- a/Responsive Web Design(NEW)/10 CSS Pseudo Selectors By Building A Balance Sheet/1 Balance Sheet.html
+++ b/Responsive Web Design(NEW)/10 CSS Pseudo Selectors By Building A Balance Sheet/1 Balance Sheet.html
@@ -186,3 +186,14 @@ Following that, add three td elements with the following text (in order): $500, 
                 <td class="current">$728</td>
               </tr>
 
+
+<!-- Step 16
+In your fourth tr element, add a th element with the text Total Assets. Wrap the text Assets in a span element with the class attribute set to sr-only.
+Following that, add three td elements with the following text (in order): $579, $736, $809. Give the third td element a class attribute set to current. -->
+
+              <tr class="total">
+                <th>Total <span class="sr-only">Assets</span></th>
+                <td>$579</td>
+                <td>$736</td>
+                <td class="current">$809</td>
+              </tr>
