--- a/Responsive Web Design(NEW)/10 CSS Pseudo Selectors By Building A Balance Sheet/2 Balance Sheet.html
+++ b/Responsive Web Design(NEW)/10 CSS Pseudo Selectors By Building A Balance Sheet/2 Balance Sheet.html
@@ -6,3 +6,41 @@ Time to move on to your second table. Start by giving it a caption element set t
             <thead></thead>
             <tbody></tbody>
           </table>
+
+
+<!-- Step 18
+Within your thead, add a tr. Inside that, add a td and three th elements. -->
+
+            <thead>
+              <tr>
+                <td>
+                  <th></th>
+                  <th></th>
+                  <th></th>
+                </td>
+              </tr>
+            </thead>
+
+
+<!-- Step 19
+Give each th element a span element with the class set to sr-only and the following text, in order: 2019, 2020, and 2021. -->
+
+<thead>
+              <tr>
+              <td></td>
+              <th><span class="sr-only">2019</span></th>
+              <th><span class="sr-only">2020</span></th>
+              <th><span class="sr-only">2021</span></th>
+              </tr>
+            </thead>
+
+
+<!-- Step 20
+Within the tbody element, add four tr elements. Give the first three the class attribute set to data, and the fourth the class attribute set to total. -->
+
+            <tbody>
+              <tr class="data"></tr>
+              <tr class="data"></tr>
+              <tr class="data"></tr>
+              <tr class="total"></tr>
+            </tbody>
