--- a/Responsive Web Design(NEW)/10 CSS Pseudo Selectors By Building A Balance Sheet/2 Balance Sheet.html
+++ b/Responsive Web Design(NEW)/10 CSS Pseudo Selectors By Building A Balance Sheet/2 Balance Sheet.html
@@ -44,3 +44,64 @@ Within the tbody element, add four tr elements. Give the first three the class a
               <tr class="data"></tr>
               <tr class="total"></tr>
             </tbody>
+
+
+<!-- Step 21
+Within the first tr, add a th element with the text Loans The outstanding balance on our startup loan.. 
+Wrap that text, except for Loans , within a span element with the class set to description.
+Add three td elements below that, and give them the following text, in order: $500, $250, and $0. Give the third td element a class set to current. -->
+
+              <tr class="data">
+                <th>Loans <span class="description">The outstanding balance on our startup loan.</span></th>
+                <td>$500</td>
+                <td>$250</td>
+                <td class="current">$0</td>
+              </tr>
+
+
+<!-- Step 22
+Within the second tr, add a th element with the text Expenses Annual anticipated expenses, such as payroll.. 
+Wrap that text, except for Expenses , within a span element with the class set to description.
+Add three td elements below that, and give them the following text, in order: $200, $300, and $400. Give the third td element a class set to current. -->
+
+              <tr class="data">
+                <th>Expenses <span class="description">Annual anticipated expenses, such as payroll.</span></th>
+                <td>$200</td>
+                <td>$300</td>
+                <td class="current">$400</td>
+              </tr>
+
+
+<!-- Step 23
+Within the third tr, add a th element with the text Credit The outstanding balance on our credit card.. 
+Wrap that text, except for Credit , within a span element with the class set to description.
+Add three td elements below that, and give them the following text, in order: $50, $50, and $75. Give the third td element a class set to current. -->
+
+              <tr class="data">
+                <th>Credit <span class="description">The outstanding balance on our credit card.</span></th>
+                <td>$50</td>
+                <td>$50</td>
+                <td class="current">$75</td>
+              </tr>
+
+
+<!-- Step 24
+In your fourth tr element, add a th element with the text Total Liabilities. Wrap the text Liabilities in a span element with the class attribute set to sr-only.
+Following that, add three td elements with the following text (in order): $750, $600, $475. Give the third td element a class attribute set to current. -->
+
+              <tr class="total">
+                <th>Total <span class="sr-only">Liabilities</span></th>
+                <td>$750</td>
+                <td>$600</td>
+                <td class="current">$475</td>
+              </tr>
+
+
+<!-- Step 25
+For your third table, add a caption with the text Net Worth, and set up a table header and table body. -->
+
+          <table>
+            <caption>Net Worth</caption>
+            <thead></thead>
+            <tbody></tbody>
+          </table>
