--- a/Responsive Web Design(NEW)/10 CSS Pseudo Selectors By Building A Balance Sheet/2 Balance Sheet.html
+++ b/Responsive Web Design(NEW)/10 CSS Pseudo Selectors By Building A Balance Sheet/2 Balance Sheet.html
@@ -105,3 +105,31 @@ For your third table, add a caption with the text Net Worth, and set up a table 
             <thead></thead>
             <tbody></tbody>
           </table>
+
+
+<!-- Step 26
+Within your thead, create a tr element. In that, add a td and three th elements. 
+Within each of the th elements, add a span element with the class set to sr-only and the following text, in order: 2019, 2020, and 2021. -->
+
+            <thead>
+              <tr>
+                <td></td>
+                <th><span class="sr-only">2019</span></th>
+                <th><span class="sr-only">2020</span></th>
+                <th><span class="sr-only">2021</span></th>
+              </tr>
+            </thead>
+
+
+<!-- Step 27
+Within the tbody, add a tr with the class set to total. In that, add a th with the text Total Net Worth, and wrap Net Worth in a span with the class set to sr-only.
+Then add three td elements, giving the third a class set to current, and giving each the following text: $-171, $136, $334. -->
+
+            <tbody>
+                <tr class="total">
+                  <th>Total <span class="sr-only">Net Worth</span></th>
+                  <td>$-171</td>
+                  <td>$136</td>
+                  <td class="current">$334</td>
+              </tr>
+            </tbody>
