--- a/Responsive Web Design(NEW)/10 CSS Pseudo Selectors By Building A Balance Sheet/3 Balance Sheet.html
+++ b/Responsive Web Design(NEW)/10 CSS Pseudo Selectors By Building A Balance Sheet/3 Balance Sheet.html
@@ -156,4 +156,70 @@ Justify the content to the end of the flex direction, and make the element stick
 }
 
 
+<!-- Step 41
+Now apply some color to your #years. Make the text #fff and the background #0a0a23. -->
+
+#years {
+  display: flex;
+  justify-content: flex-end;
+  position: sticky;
+  top: 0;
+  color: #fff;
+  background: #0a0a23;
+}
+
+
+<!-- Step 42
+The calc() function is a CSS function that allows you to calculate a value based on other values. 
+For example, you can use it to calculate the width of the viewport minus the margin of an element:
+
+.example {
+  margin: 10px;
+  width: calc(100% - 20px);
+}
+Ensure your years do not get hidden by setting a z-index of 999. Then, give it a margin of 0 -2px, and a padding set to 0.5rem calc(1.25rem + 2px) 0.5rem 0. -->
+
+#years {
+  display: flex;
+  justify-content: flex-end;
+  position: sticky;
+  top: 0;
+  background: #0a0a23;
+  color: #fff;
+  z-index: 999;
+  margin: 0 -2px;
+  padding: 0.5rem calc(1.25rem + 2px) 0.5rem 0;
+}
+
+
+<!-- Step 43
+Style the text within your #years element by creating a #years span[class] selector. 
+The span[class] syntax will target any span element that has a class attribute set, regardless of the attribute's value.
+Give your new selector a bold font, a width of 4.5rem, and text aligned to the right. -->
+
+#years span[class] {
+  font-weight: bold;
+  width: 4.5rem;
+  text-align: right;
+}
+
+
+<!-- Step 44
+You wrapped your tables in a container with the table-wrap class. Create a selector for that class, and give it a padding set to 0 0.75rem 1.5rem 0.75rem. -->
+
+.table-wrap {
+  padding: 0 0.75rem 1.5rem 0.75rem;
+}
+
+
+<!-- Step 45
+Before you start diving in to the table itself, your span elements are currently bolded. 
+Create a span:not(.sr-only) selector and give it a font-weight property set to normal.
+The :not() pseudo-selector is used to target all elements that do not match the selector - in this case, 
+any of your span elements that do not have the span[class~="sr-only"] class. This ensures that your earlier rules for the sr-only class are not overwritten. -->
+
+span:not(.sr-only) {
+  font-weight: normal;
+}
+
 
