--- a/Responsive Web Design(NEW)/10 CSS Pseudo Selectors By Building A Balance Sheet/4 Balance Sheet.html
+++ b/Responsive Web Design(NEW)/10 CSS Pseudo Selectors By Building A Balance Sheet/4 Balance Sheet.html
@@ -8,3 +8,55 @@ table caption {
   font-weight: normal;
 }
 
+
+<!-- Step 51
+Now give the captions an absolute position, and shift them -2.25rem from the top and 0.5rem from the left. -->
+
+table caption {
+  color: #356eaf;
+  font-size: 1.3em;
+  font-weight: normal;
+  position: absolute;
+  top: -2.25rem;
+  left: 0.5rem;
+}
+
+
+<!-- Step 52
+Create a selector to target your td elements within your table body. Give them a width to fill the viewport, with a minimum and maximum of 4rem. 
+This approach ensures that the width is fixed, whereas setting width specifically would allow the elements to shrink to the container 
+(because we are using flexbox). -->
+
+tbody td {
+  width: 100vw;
+  min-width: 4rem;
+  max-width: 4rem;
+}
+
+
+<!-- Step 53
+Now target the th elements within your table body, and give them a width of the entire container, less 12rem. -->
+
+tbody th {
+  width: calc(100% - 12rem);
+}
+
+
+<!-- Step 54
+The [attribute="value"] selector targets any element that has an attribute with a specific value. Create a tr[class="total"] selector to target specifically 
+your tr elements with the total class. Give it a bottom border of 4px double #0a0a23 and make the font bold. -->
+
+tr[class="total"] {
+  border-bottom: 4px double #0a0a23;
+  font-weight: bold;
+}
+
+
+<!-- Step 55
+Using the same selector syntax, target the th elements within your table rows where the class is total. Align the text to the left, 
+and give them a padding of 0.5rem 0 0.25rem 0.5rem. -->
+
+tr[class="total"] th {
+  text-align: left;
+  padding: 0.5rem 0 0.25rem 0.5rem;
+}
