--- a/Responsive Web Design(NEW)/10 CSS Pseudo Selectors By Building A Balance Sheet/4 Balance Sheet.html
+++ b/Responsive Web Design(NEW)/10 CSS Pseudo Selectors By Building A Balance Sheet/4 Balance Sheet.html
@@ -107,3 +107,50 @@ tr[class="data"] {
 }
 
 
+<!-- Step 61
+Select the th elements within your tr.data elements. Align the text to the left, and give them a top padding of 0.3rem and a left padding of 0.5rem. -->
+
+tr.data th {
+  text-align: left;
+  padding-top: 0.3rem;
+  padding-left: 0.5rem;
+}
+
+
+<!-- Step 62
+Create a tr.data th .description selector to target the elements with the class set to description that are within your th elements in your .data table rows. 
+Give them a block display, make the text italic with a normal weight, and position them with a padding set to 1rem 0 0.75rem and a right margin of -13.5rem. -->
+
+tr.data th .description {
+  display: block;
+  font-style: italic;
+  font-weight: normal;
+  padding: 1rem 0 0.75rem;
+  margin-right: -13.5rem;
+}
+
+
+<!-- Step 63
+Your span elements now all have more specific styling, which means you can remove your span rule. -->
+
+
+<!-- Step 64
+Your dollar amounts are currently misaligned. Create a selector to target the td elements within your tr.data elements. 
+Vertically align the text to the top, horizontally align the text to the right, and set the padding to 0.3rem 0.25rem 0. -->
+
+tr.data td {
+  vertical-align: top;
+  text-align: right;
+  padding: 0.3rem 0.25rem 0;
+}
+
+
+<!-- Step 65
+Create another selector for the td elements within your tr.data element, but specifically select the last one. Give this a right padding of 0.5rem.
+
+With this, your balance sheet is complete! -->
+
+tr.data td:last-of-type {
+  padding-right: 0.5rem;
+}
+
