Update 1 Picasso paint.html

--- a/Responsive Web Design(NEW)/11 Intermediate CSS by Building a Picasso Painting/1 Picasso paint.html
+++ b/Responsive Web Design(NEW)/11 Intermediate CSS by Building a Picasso Painting/1 Picasso paint.html
@@ -8,3 +8,32 @@ Start by setting up your HTML structure. Add a <!DOCTYPE> declaration and an htm
 </html>
 
 
+<!-- Step 2
+Within your head element, add a meta tag with the charset attribute set to utf-8. Also add a title element with the text Picasso Painting. -->
+
+<meta charset="utf-8">
+<title>Picasso Painting</title>
+
+
+<!-- Step 3
+Go ahead and link your CSS file now, even though you have not written any CSS yet.
+Add a link element with a rel of stylesheet, a type of text/css, and an href of styles.css. -->
+
+<link rel="stylesheet" type="text/css" href="styles.css" />
+
+
+<!-- Step 4
+FontAwesome is a library of SVG-powered icons, many of which are freely available to use. 
+You will be using some of these icons in this project, so you will need to link the external stylesheet to your HTML.
+Add a link element with a rel of stylesheet and an href of https://use.fontawesome.com/releases/v5.8.2/css/all.css. -->
+
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" />
+
+
+<!-- Step 5
+To get your painting started, give your body element a background-color of rgb(184, 132, 46). -->
+
+body {
+  background-color: rgb(184, 132, 46);
+}
+
