--- a/Responsive Web Design(NEW)/11 Intermediate CSS by Building a Picasso Painting/1 Picasso paint.html
+++ b/Responsive Web Design(NEW)/11 Intermediate CSS by Building a Picasso Painting/1 Picasso paint.html
@@ -37,3 +37,50 @@ body {
   background-color: rgb(184, 132, 46);
 }
 
+
+<!-- Step 6
+Within your body tag, add a div element. Give it an id of back-wall. -->
+
+<div id="back-wall"></div>
+
+
+<!-- Step 7
+Use an id selector to give the back-wall element a background-color of #8B4513. -->
+
+#back-wall {
+  background-color: #8B4513;
+}
+
+
+<!-- Step 8
+Give the back-wall element a width of 100% and a height of 60%. -->
+
+width: 100%;
+height: 60%;
+
+
+<!-- Step 9
+Typically, HTML is rendered in a top-down manner. Elements at the top of the code are positioned at the top of the page. 
+However, many times you may want to move the elements to different positions. You can do this with the position attribute.
+
+Set the position attribute for the back-wall element to absolute. 
+An absolute position takes the element out of that top-down document flow and allows you to adjust it relative to its container.
+
+When an element is manually positioned, you can shift its layout with top, left, right, and bottom. 
+Set the back-wall to have a top value of 0, and a left value of 0. -->
+
+position: absolute;
+top: 0;
+left: 0;
+
+
+<!-- Step 10
+The z-index property is used to create "layers" for your HTML elements. If you are familiar with image editing tools, you may have worked with layers before. 
+This is a similar concept.
+
+Elements with a higher z-index value will appear to be layered on top of elements with a lower z-index value. 
+This can be combined with the positioning in the previous lesson to create unique effects.
+
+Since the back-wall element will need to appear "behind" the other elements you will be creating, give the back-wall element a z-index of -1. -->
+
+z-index: -1;
