Update 1 Picasso paint.html

--- a/Responsive Web Design(NEW)/11 Intermediate CSS by Building a Picasso Painting/1 Picasso paint.html
+++ b/Responsive Web Design(NEW)/11 Intermediate CSS by Building a Picasso Painting/1 Picasso paint.html
@@ -84,3 +84,44 @@ This can be combined with the positioning in the previous lesson to create uniqu
 Since the back-wall element will need to appear "behind" the other elements you will be creating, give the back-wall element a z-index of -1. -->
 
 z-index: -1;
+
+
+<!-- Step 11
+Below your back-wall element, create a div with a class of characters. This is where you will be creating your painting's characters. -->
+
+<div class="characters"></div>
+
+
+<!-- Step 12
+Inside that characters element, create another div with an id of offwhite-character. -->
+
+<div id="offwhite-character"></div>
+
+
+<!-- Step 13
+Create four div elements inside your offwhite-character element. Give those div elements the following id values, in order: 
+white-hat, black-mask, gray-instrument, tan-table. -->
+
+<div id="white-hat"></div>
+<div id="black-mask"></div>
+<div id="gray-instrument"></div>
+<div id="tan-table"></div>
+
+
+<!-- Step 14
+This character needs eyes. Create two div elements in the black-mask element. Give them the classes eyes left and eyes right, in that order. -->
+
+<div class="eyes left"></div>
+<div class="eyes right"></div>
+
+
+Step 15
+<!-- Create some "dots" for the instrument. Add five div elements within your gray-instrument element. Set the class of each to black-dot. -->
+
+<div class="black-dot"></div>
+<div class="black-dot"></div>
+<div class="black-dot"></div>
+<div class="black-dot"></div>
+<div class="black-dot"></div>
+
+
