--- a/Responsive Web Design(NEW)/11 Intermediate CSS by Building a Picasso Painting/1 Picasso paint.html
+++ b/Responsive Web Design(NEW)/11 Intermediate CSS by Building a Picasso Painting/1 Picasso paint.html
@@ -169,3 +169,43 @@ border-left-color: transparent;
 border-bottom-color: GhostWhite;
 
 
+<!-- Step 21
+Give the hat a position of absolute, a top value of -140px, and a left value of 0. -->
+
+  position: absolute;
+  top: -140px;
+  left: 0;
+
+
+<!-- Step 22
+Using an id selector, create a rule for your black-mask element. Give it a width of 100%, a height of 50px, and a background-color of rgb(45, 31, 19). -->
+
+#black-mask {
+  width: 100%;
+  height: 50px;
+  background-color: rgb(45, 31, 19);
+}
+
+
+<!-- Step 23
+Give the mask a position of absolute, and a top and left value of 0. -->
+
+position: absolute;
+top: 0;
+left: 0;
+
+
+<!-- Step 24
+To ensure you can see the mask, give it a z-index of 1. -->
+
+z-index: 1;
+
+
+<!-- Step 25
+Using an id selector, give your gray-instrument element a width of 15%, a height of 40%, and a background-color of rgb(167, 162, 117). -->
+
+#gray-instrument {
+  width: 15%;
+  height: 40%;
+  background-color: rgb(167, 162, 117);
+}
