--- a/Responsive Web Design(NEW)/11 Intermediate CSS by Building a Picasso Painting/1 Picasso paint.html
+++ b/Responsive Web Design(NEW)/11 Intermediate CSS by Building a Picasso Painting/1 Picasso paint.html
@@ -209,3 +209,42 @@ Using an id selector, give your gray-instrument element a width of 15%, a height
   height: 40%;
   background-color: rgb(167, 162, 117);
 }
+
+
+<!-- Step 26
+Now move it into place with a position of absolute, a top value of 50px, and a left value of 125px. -->
+
+position: absolute;
+top: 50px;
+left: 125px;
+
+
+<!-- Step 27
+Set the z-index to 1. -->
+
+z-index: 1;
+
+
+<!-- Step 28
+Use a class selector to create a rule for the black-dot elements. Set the width to 10px, the height to 10px, and the background-color to rgb(45, 31, 19). -->
+
+.black-dot {
+  width: 10px;
+  height: 10px;
+  background-color: rgb(45, 31, 19);
+}
+
+
+<!-- Step 29
+These dots are just a little too square. Give the black-dot class a border-radius of 50% to fix it. -->
+
+border-radius: 50%;
+
+
+<!-- Step 30
+Move the dots into place by setting the display to block, the margin to auto, and the margin-top to 65%. -->
+
+display: block;
+margin: auto;
+margin-top: 65%;
+
