Update 2 Picasso paint.html

--- a/Responsive Web Design(NEW)/11 Intermediate CSS by Building a Picasso Painting/2 Picasso paint.html
+++ b/Responsive Web Design(NEW)/11 Intermediate CSS by Building a Picasso Painting/2 Picasso paint.html
@@ -131,3 +131,46 @@ Position the gray-mask by setting position to absolute, the top to -10px, and th
   left: 70px;
 
 
+<!-- Step 46
+Using an id selector, create a rule for the white-paper element. Set the width to 400px, the height to 100px, and the background-color to GhostWhite. -->
+
+#white-paper {
+  width: 400px;
+  height: 100px;
+  background-color: GhostWhite;
+}
+
+
+<!-- Step 47
+Give the white-paper a position of absolute, a top of 250px, and a left of -150px to move it into place. -->
+
+  position: absolute;
+  top: 250px;
+  left: -150px;
+
+
+<!-- Step 48
+Set the z-index of the white-paper to 1. -->
+
+z-index: 1;
+
+
+<!-- Step 49
+FontAwesome icons come with their own styling to define the icon. However, you can still set the styling yourself as well, to change things like the color and size. 
+For now, use a class selector to target your fa-music icons. Set the display to inline-block, the margin-top to 8%, and the margin-left to 13%. -->
+
+.fa-music {
+  display: inline-block;
+  margin-top: 8%;
+  margin-left: 13%;
+}
+
+
+<!-- Step 50
+Below your black-character element, add two new div elements. These will be the shawl. Give both of them a class of blue. 
+Then give the first one an id of blue-left, and the second an id of blue-right. -->
+
+<div class="blue" id="blue-left"></div>
+<div class="blue" id="blue-right"></div>
+
+
