Update 2 Picasso paint.html

--- a/Responsive Web Design(NEW)/11 Intermediate CSS by Building a Picasso Painting/2 Picasso paint.html
+++ b/Responsive Web Design(NEW)/11 Intermediate CSS by Building a Picasso Painting/2 Picasso paint.html
@@ -212,3 +212,43 @@ Give the blue-right the correct positioning with position set to absolute, top s
   position: absolute;
   top: 50%;
   left: 40%;
+
+
+<!-- Step 56
+Below your blue elements, add another div. Give it the id value of orange-character. -->
+
+<div id="orange-character"></div>
+
+
+<!-- Step 57
+Within that orange-character element, add four div elements. Give them the id values of black-round-hat, eyes-div, triangles, and guitar, in order. -->
+
+<div id="black-round-hat"></div>
+<div id="eyes-div"></div>
+<div id="triangles"></div>
+<div id="guitar"></div>
+
+
+<!-- Step 58
+The eyes-div element should hold some eyes. Add two div elements inside. Give the first a class of eyes left, and give the second a class of eyes right. -->
+
+<div class="eyes left"></div>
+<div class="eyes right"></div>
+
+
+<!-- Step 59
+Within the triangles div, you will need to add the elements that will become your triangles. Create thirty div elements and give each of them the class triangle. -->
+
+<div class="triangle"></div>
+
+
+<!-- Step 60
+Within the guitar element, create three div elements. Give the first two a class value of guitar. 
+Then give the first an id of guitar-left, and the second an id of guitar-right. Add an id to the third div with the value guitar-neck.
+The third div should not have the guitar class. -->
+
+<div class="guitar" id="guitar-left"></div>
+<div class="guitar" id="guitar-right"></div>
+<div id="guitar-neck"></div>
+
+
