Update 3 Picasso paint.html

--- a/Responsive Web Design(NEW)/11 Intermediate CSS by Building a Picasso Painting/3 Picasso paint.html
+++ b/Responsive Web Design(NEW)/11 Intermediate CSS by Building a Picasso Painting/3 Picasso paint.html
@@ -1,2 +1,45 @@
 <!-- Step 61
 Use another FontAwesome icon for your guitar. Inside both the guitar-left and guitar-right elements, add an i element and give it a class of fas fa-bars. -->
+
+              <div class="guitar" id="guitar-left">
+                <i class="fas fa-bars"></i>
+              </div>
+              <div class="guitar" id="guitar-right">
+                <i class="fas fa-bars"></i>
+              </div>
+
+
+<!-- Step 62
+Select your orange-character element with an id selector. Give it a width of 250px, a height of 550px, and a background-color of rgb(240, 78, 42). -->
+
+#orange-character {
+  width: 250px;
+  height: 550px;
+  background-color: rgb(240, 78, 42);
+}
+
+
+<!-- Step 63
+Give the orange-character a position of absolute, a top of 25%, and a left of 40%. -->
+
+  position: absolute;
+  top: 25%;
+  left: 40%;
+
+
+<!-- Step 64
+Style your black-round-hat element with an id selector. Set the width to 180px, the height to 150px, and the background-color to rgb(45, 31, 19). -->
+
+#black-round-hat {
+  width: 180px;
+  height: 150px;
+  background-color: rgb(45, 31, 19);
+}
+
+
+<!-- Step 65
+The black-round-hat should probably be round. Give it a border-radius of 50% to fix this. -->
+
+border-radius: 50%;
+
+
