Update 3 Picasso paint.html

--- a/Responsive Web Design(NEW)/11 Intermediate CSS by Building a Picasso Painting/3 Picasso paint.html
+++ b/Responsive Web Design(NEW)/11 Intermediate CSS by Building a Picasso Painting/3 Picasso paint.html
@@ -165,3 +165,47 @@ Select the id with value guitar-left, and set the position to absolute and the l
 }
 
 
+<!-- Step 81
+Select the id with value guitar-right, and also set position to absolute. This time, set left to 100px. -->
+
+#guitar-right {
+  position: absolute;
+  left: 100px;
+}
+
+
+<!-- Step 82
+Now you need to move the bar icons into place. Create a class selector for the fa-bars class. 
+Set the display to block, the margin-top to 30%, and the margin-left to 40%. -->
+
+.fa-bars {
+  display: block;
+  margin-top: 30%;
+  margin-left: 40%;
+}
+
+
+<!-- Step 83
+Use an id selector to create a guitar-neck rule. Set the width to 200px, the height to 30px, and the background-color to #D2691E. -->
+
+#guitar-neck {
+  width: 200px;
+  height: 30px;
+  background-color: #D2691E;
+}
+
+
+<!-- Step 84
+Now move the guitar-neck with a position of absolute, a top value of 45px, and a left value of 200px. -->
+
+  position: absolute;
+  top: 45px;
+  left: 200px;
+
+
+<!-- Step 85
+Give the guitar-neck a z-index of 3. -->
+
+z-index: 3;
+
+
