--- a/Responsive Web Design(NEW)/12 Responsive Web Design by Building a Piano/1 piano.html
+++ b/Responsive Web Design(NEW)/12 Responsive Web Design by Building a Piano/1 piano.html
@@ -1,2 +1,47 @@
 <!-- Step 1
 Begin with the basic HTML structure. Add a DOCTYPE declaration and html, head, body, and title elements. Set the title to Piano. -->
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Piano</title>
+  </head>
+  <body></body>
+</html>
+
+
+<!-- Step 2
+Add two meta tags, one to optimize your page for mobile devices, and one to specify an accepted charset for the page. -->
+
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+
+<!-- Step 3
+Time to start working on the piano. Create a div element within your body element with the id set to piano. -->
+
+<div id="piano"></div>
+
+
+<!-- Step 4
+Nest a second div within your existing div, and set the class to be keys. -->
+
+<div class="keys"></div>
+
+
+<!-- Step 5
+Within your .keys element, add seven div elements. Give them all the class key. -->
+
+    <div id="piano">
+      <div class="keys">
+        <div class="key"></div>
+        <div class="key"></div>
+        <div class="key"></div>
+        <div class="key"></div>
+        <div class="key"></div>
+        <div class="key"></div>
+        <div class="key"></div>
+      </div>
+    </div>
+
+
