--- a/Responsive Web Design(NEW)/13 Technical Documentation Page/index.html
+++ b/Responsive Web Design(NEW)/13 Technical Documentation Page/index.html
@@ -29,18 +29,43 @@ Note: Be sure to add <link rel="stylesheet" href="styles.css"> in your HTML to l
     <main id="main-doc">
       <section class="main-section" id="Section_1">
         <header>Section 1</header>
+        <article>
+          <code>Ctrl + Tab</code>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc varius libero at dictum lobortis.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc varius libero at dictum lobortis.</p>
+        </article>
       </section>
       <section class="main-section" id="Section_2">
         <header>Section 2</header>
+        <article>
+          <code>Ctrl + Tab</code>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc varius libero at dictum lobortis.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc varius libero at dictum lobortis.</p>
+        </article>
       </section>
       <section class="main-section" id="Section_3">
         <header>Section 3</header>
+        <article>
+          <code>Ctrl + Tab</code>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc varius libero at dictum lobortis.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc varius libero at dictum lobortis.</p>
+        </article>
       </section>
       <section class="main-section" id="Section_4">
         <header>Section 4</header>
+        <article>
+          <code>Ctrl + Tab</code>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc varius libero at dictum lobortis.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc varius libero at dictum lobortis.</p>
+        </article>
       </section>
       <section class="main-section" id="Section_5">
         <header>Section 5</header>
+        <article>
+          <code>Ctrl + Tab</code>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc varius libero at dictum lobortis.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc varius libero at dictum lobortis.</p>
+        </article>
       </section>
     </main>
   </body>
