--- a/Responsive Web Design(NEW)/13 Technical Documentation Page/index.html
+++ b/Responsive Web Design(NEW)/13 Technical Documentation Page/index.html
@@ -4,6 +4,9 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <nav id="navbar">
+      <header>All sections</header>
+    </nav>
     <main id="main-doc">
       <section class="main-section" id="Section_1">
         <header>Section 1</header>
