--- a/Responsive Web Design(NEW)/13 Technical Documentation Page/index.html
+++ b/Responsive Web Design(NEW)/13 Technical Documentation Page/index.html
@@ -11,7 +11,7 @@
       <section class="main-section" id="Section_1">
         <header>Section 1</header>
         <article>
-          <code>Ctrl + Tab</code>
+          <code>Ctrl + 1</code>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc varius libero at dictum lobortis.</p>
           <p> Etiam ut interdum magna. Etiam ut diam ut mi pulvinar lacinia non et risus.</p>
           <ul>
@@ -24,7 +24,7 @@
       <section class="main-section" id="Section_2">
         <header>Section 2</header>
         <article>
-          <code>Ctrl + Tab</code>
+          <code>Ctrl + 2</code>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc varius libero at dictum lobortis.</p>
           <ul>
             <li>List item 4</li>
@@ -36,7 +36,7 @@
       <section class="main-section" id="Section_3">
         <header>Section 3</header>
         <article>
-          <code>Ctrl + Tab</code>
+          <code>Ctrl + 3</code>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc varius libero at dictum lobortis.</p>
           <p> Etiam ut interdum magna. Etiam ut diam ut mi pulvinar lacinia non et risus.</p>
         </article>
@@ -44,7 +44,7 @@
       <section class="main-section" id="Section_4">
         <header>Section 4</header>
         <article>
-          <code>Ctrl + Tab</code>
+          <code>Ctrl + 4</code>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc varius libero at dictum lobortis.</p>
           <p> Etiam ut interdum magna. Etiam ut diam ut mi pulvinar lacinia non et risus.</p>
         </article>
@@ -52,7 +52,7 @@
       <section class="main-section" id="Section_5">
         <header>Section 5</header>
         <article>
-          <code>Ctrl + Tab</code>
+          <code>Ctrl + 5</code>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc varius libero at dictum lobortis.</p>
           <p> Etiam ut interdum magna. Etiam ut diam ut mi pulvinar lacinia non et risus.</p>
         </article>
